# garmin-dashboard

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_laps.sql
backend/src/: cli.rs  main.rs  models.rs
backend/src/api/: activities.rs  mod.rs  wellness.rs
backend/src/db/: mod.rs
backend/src/parsers/: csv_wellness.rs  fit.rs  gpx.rs  json_activities.rs  json_wellness.rs  mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityBadge.tsx  ActivityMap.tsx  EmptyState.tsx  Nav.tsx  StatCard.tsx  UnitsToggle.tsx
frontend/src/context/: UnitsContext.tsx
frontend/src/pages/: Activities.tsx  ActivityDetail.tsx  Dashboard.tsx  Wellness.tsx
