[package]
name = "garmin-dash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garmin-dash"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fitparser = "0.6"
gpx = "0.10"
csv = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
